--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 - git.training
+	Adding changes before rebasing conflict
 -->
 <head>
 	<title>A very good website</title>
