--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 - git.training
-	Adding changes before rebasing conflict
+	changes made on the master branch to cause conflicts
 -->
 <head>
 	<title>A very good website</title>
@@ -19,6 +19,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Extremely interesting content.
+			Content causing conflicts, added in master b.
 		</p>
 	</main>
 	<footer class="container">
