Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2020 - git.training	
 -->
 <head>
-	<title>A very good website</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,8 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Extremely interesting content.
-			Content causing trouble!
+			Adding extremely important content.
 		</p>
 	</main>
 	<footer class="container">
